--- a/Assignment/Assignment.csproj
+++ b/Assignment/Assignment.csproj
@@ -91,6 +91,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CoffeeShopDataSet5.xsd</DependentUpon>
     </Compile>
+    <Compile Include="CoffeeShopDataSet6.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CoffeeShopDataSet6.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Delete.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +134,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Register.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Register.Designer.cs">
+      <DependentUpon>Register.cs</DependentUpon>
+    </Compile>
     <Compile Include="ShowData.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -164,7 +175,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Register.resx">
+      <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ShowData.resx">
       <DependentUpon>ShowData.cs</DependentUpon>
     </EmbeddedResource>
@@ -234,6 +249,17 @@
     <None Include="CoffeeShopDataSet5.xss">
       <DependentUpon>CoffeeShopDataSet5.xsd</DependentUpon>
     </None>
+    <None Include="CoffeeShopDataSet6.xsc">
+      <DependentUpon>CoffeeShopDataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="CoffeeShopDataSet6.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>CoffeeShopDataSet6.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="CoffeeShopDataSet6.xss">
+      <DependentUpon>CoffeeShopDataSet6.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -246,6 +272,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\ColombiaInstant.jpg" />
+    <Content Include="Resources\ColombiaWB.jpg" />
+    <Content Include="Resources\cross.jpg" />
+    <Content Include="Resources\favicon.ico" />
+    <Content Include="Resources\GetWeird.png" />
+    <Content Include="Resources\image1.png" />
+    <Content Include="Resources\image2.jpg" />
+    <Content Include="Resources\image3.jpg" />
+    <Content Include="Resources\image4.jpg" />
+    <Content Include="Resources\image_bg.png" />
+    <Content Include="Resources\Purpose.jpg" />
+    <Content Include="Resources\VerandaInstant.jpg" />
+    <Content Include="Resources\VerandaWB.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
